[gd_scene load_steps=4 format=3 uid="uid://c3g28rj6s7o3l"]

[ext_resource type="Script" path="res://Scenes/kernel.gd" id="1_ucwt3"]
[ext_resource type="PackedScene" uid="uid://putsv562o86l" path="res://Scenes/deck.tscn" id="1_vxrh1"]
[ext_resource type="PackedScene" uid="uid://bsbem8bswoigv" path="res://Scenes/power_core.tscn" id="2_13xlu"]

[node name="Kernel" type="Node2D"]
script = ExtResource("1_ucwt3")

[node name="LineHolder" type="Node2D" parent="."]

[node name="PowerCoreLine2D" type="Line2D" parent="LineHolder"]

[node name="Deck" parent="." instance=ExtResource("1_vxrh1")]
position = Vector2(400, 720)

[node name="PowerCore" parent="." instance=ExtResource("2_13xlu")]
position = Vector2(64, 312)

[node name="MapReferenceRect" type="ReferenceRect" parent="."]
offset_right = 800.0
offset_bottom = 640.0

[connection signal="box_selected" from="Deck" to="." method="_on_deck_box_selected"]
